This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

19-Aug-2003 (Lars Duening)  (3.3.480)
  - (lex, prolang.y, files.c, simulate.c, backend.c, closure.c) Redefinition
      of LPC preprocessor macros now list the file and line of the original
      definition (suggest by Bardioc).

14-Aug-2003 (Lars Duening)  (3.3.479)
  - (smalloc.c, debug_info.h) Added small block defragmentation
      statistics.

14-Aug-2003 (Lars Duening)  (3.3.478)
  - (pkg-tls, comm, md5, configure) Added the OpenSSL support. It's probably
      buggy as heck as I had to copy&paste from OpenSSL demo programs due
      to lack of documentation.

13-Aug-2003 (Lars Duening)  (3.3.477)
  - (pkg-tls) Added the program initialisation/de-initialisation code for
      OpenSSL.

09-Aug-2003 (Lars Duening)  (3.3.476)
  - (configure) The configuration script now looks for OpenSSL before
      GnuTLS. However, TLS support using OpenSSL is not implemented yet.

09-Aug-2003 (Lars Duening)  (3.3.475)
  - (main.c, pkg-tls) The x509 key and certfile can now be specifed
      on the commandline with '--tls-key' and '--tls-cert'.

08-Aug-2003 (Lars Duening)  (3.3.474)
  - (pkg-tls.c, comm.c) Corrected compilation errors in the TLS code
      (I didn't have GnuTLS installed before, so I didn't notice).

08-Aug-2003 (Lars Duening)  (3.3.473)
  - (lex.c) Symbol __PTHREADS__ is defined if the driver is compiled
       for pthreads (suggested by Gawain).
  - (configure, pkg-tls) Added TLS support (using GnuTLS) - thanks,
       Gawain!

07-Aug-2003 (Lars Duening)  (3.3.472)
  - (doc/) Corrected a number of typos (thanks, Casey!)
  - (object.c) The efun variable_list() can now return variable values
       as well (thanks, Casey!).

07-Aug-2003 (Lars Duening)  (3.3.471)
  - (configure, pkg-mysql, main.c) Improved the recognition of mySQL when
       there's more than one mySQL installation. Additionally the pkg-mysql