@@ -63,12 +63,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 480)
-(Parent-Version lpmud 3-3 479)
-(Version-Log "Redefinition of preprocessor macros list file and line of the original definition.")
+(Project-Version lpmud 3-3 481)
+(Parent-Version lpmud 3-3 480)
+(Version-Log "Better checks against using mySQL/PostgreSQL even though the machine doesn't support it.")
 (New-Version-Log
 "")
-(Checkin-Time "Tue, 19 Aug 2003 22:51:25 -0600")
+(Checkin-Time "Wed, 20 Aug 2003 23:17:32 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -106,20 +106,20 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.10 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.68 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.543 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.544 644))
   (HISTORY (lpmud/f/49_HISTORY 1.331 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
   ;; Configuration
-  (src/configure (lpmud/d/0_configure 1.19.1.87 755))
+  (src/configure (lpmud/d/0_configure 1.19.1.88 755))
   (src/config.h.in (lpmud/d/1_config.h 1.41.1.4.1.8.1.35 644))
   (src/machine.h.in (lpmud/b/9_machine.h. 1.9.1.8 644))
   (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39.1.19.1.21 644))
   (src/mkinstalldirs (lpmud/c/4_mkinstalld 1.1 644))
   (src/install-sh (lpmud/c/5_install-sh 1.2 755))
 
-  (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.77 644))
+  (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.78 644))
   (src/autoconf/acconfig.h (lpmud/d/10_acconfig.h 1.6.1.8 644))
 
   (src/settings/README (lpmud/c/22_README 1.14.1.15 644))
@@ -266,11 +266,11 @@
   (src/pkg-mccp.h (lpmud/d/b/48_pkg-mccp.h 1.1 644))
   (src/pkg-mccp.c (lpmud/d/b/49_pkg-mccp.c 1.3 644))
   (src/pkg-mysql.c (lpmud/j/1_pkg-mysql. 1.21 644))
-  (src/pkg-mysql.h (lpmud/j/2_pkg-mysql. 1.4 644))
+  (src/pkg-mysql.h (lpmud/j/2_pkg-mysql. 1.5 644))
   (src/pkg-pcre.h (lpmud/a/b/7_pkg-pcre.h 1.1 644))
   (src/pkg-pcre.c (lpmud/q/48_pcre-pcre. 1.5 644))
   (src/pkg-pgsql.c (lpmud/d/b/39_pkg-pgsql. 1.2 644))
-  (src/pkg-pgsql.h (lpmud/d/b/40_pkg-pgsql. 1.1 644))
+  (src/pkg-pgsql.h (lpmud/d/b/40_pkg-pgsql. 1.2 644))
   (src/pkg-tls.h (lpmud/e/b/10_pkg-tls.h 1.5 644))
   (src/pkg-tls.c (lpmud/e/b/11_pkg-tls.c 1.5 644))
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.18 644))
